<resources>
    <string name="app_name">TripPlannerDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="re_enter_password">ReEnter Password</string>
    <string name="password"> Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="registration_label">Register/SignUp</string>
    <string name="activity_name">Activity Name</string>
    <string name="location">Location</string>
    <string name="add_activity">Add Activity</string>
    <string name="your_activities">Your Activities</string>
    <string name="duration_in_hours">Duration (in hours)</string>
    <string name="start_time_hh_mm">Start Time (HH:mm)</string>
    <string name="enter_name">Enter Name</string>
    <string name="no_activities">No Activities Created yet.</string>
    <string name="Title">Name</string>
    <string name="start_time_duration">Start Time - Duration</string>
    <string name="updateActivity">Update Activity</string>
    <string name="add">Add</string>
</resources>