<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <TextView
        android:id="@+id/appBarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:gravity="center"
        android:padding="30dp"
        android:background="@color/lightBlue"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/imgLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintTop_toTopOf="@id/appBarTitle"
        app:layout_constraintBottom_toBottomOf="@id/appBarTitle"
        app:layout_constraintEnd_toEndOf="@id/appBarTitle"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarTitle"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- Activity Name EditText -->
            <EditText
                android:id="@+id/etActivityName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/activity_name"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Location EditText -->
            <EditText
                android:id="@+id/etLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/location"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etActivityName" />

            <!-- Start Time EditText -->
            <TextView
                android:id="@+id/etStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/start_time_hh_mm"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLocation" />

            <!-- Duration EditText -->
            <EditText
                android:id="@+id/etDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/duration_in_hours"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etStartTime" />

            <!-- Add Activity Button -->
            <Button
                android:id="@+id/btnAddActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="12dp"
                android:tag="0"
                android:text="@string/add_activity"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDuration" />

            <!-- Activities List Title -->
            <TextView
                android:id="@+id/tvActivitiesListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/your_activities"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAddActivity" />

            <!-- RecyclerView for Activities List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActivities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                tools:itemCount="3"
                tools:listitem="@layout/activity_timeline_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvActivitiesListTitle" />
            <TextView
                android:id="@+id/tvEmptyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_activities"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/rvActivities"
                app:layout_constraintStart_toStartOf="@id/rvActivities"
                app:layout_constraintTop_toBottomOf="@id/rvActivities" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>